--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,47 +15,48 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.0",
+    "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.0",
+    "@nestjs/core": "^10.4.20",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.4.0",
-    "@nestjs/platform-socket.io": "^10.4.0",
-    "@nestjs/throttler": "^6.2.0",
-    "@nestjs/websockets": "^10.4.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.20",
+    "@nestjs/platform-socket.io": "^10.4.20",
+    "@nestjs/throttler": "^6.5.0",
+    "@nestjs/websockets": "^10.4.20",
     "@todoai/ai": "workspace:*",
     "@todoai/db": "workspace:*",
     "@todoai/types": "workspace:*",
-    "argon2": "^0.41.0",
-    "bullmq": "^5.25.0",
+    "argon2": "^0.44.0",
+    "bullmq": "^5.33.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "helmet": "^8.0.0",
-    "ioredis": "^5.4.0",
+    "ioredis": "^5.4.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.0",
-    "zod": "^3.23.0"
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.0",
-    "@nestjs/schematics": "^10.2.0",
-    "@nestjs/testing": "^10.4.0",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.20",
     "@todoai/config": "workspace:*",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^20.17.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.0",
     "@types/passport-jwt": "^4.0.1",
     "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.2.0",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^5.7.0"
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
-
