--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -14,17 +14,18 @@
     "@todoai/ai": "workspace:*",
     "@todoai/db": "workspace:*",
     "@todoai/types": "workspace:*",
-    "bullmq": "^5.25.0",
-    "ioredis": "^5.4.0",
+    "bullmq": "^5.33.3",
+    "ioredis": "^5.4.2",
     "pino": "^9.5.0",
-    "zod": "^3.23.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@todoai/config": "workspace:*",
-    "@types/node": "^20.17.0",
-    "tsup": "^8.3.0",
-    "tsx": "^4.19.0",
-    "typescript": "^5.7.0"
+    "@types/node": "^22.10.0",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "pino-pretty": "^13.0.0"
   }
 }
 
