--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "test": "pnpm exec turbo run test",
     "typecheck": "pnpm exec turbo run typecheck",
     "clean": "pnpm exec turbo run clean && rm -rf node_modules",
-    "db:generate": "pnpm --filter @todoai/db exec prisma generate",
-    "db:push": "pnpm --filter @todoai/db exec prisma db push",
-    "db:migrate": "pnpm --filter @todoai/db exec prisma migrate dev",
-    "db:studio": "pnpm --filter @todoai/db exec prisma studio",
+    "db:generate": "cd packages/db && pnpm exec prisma generate",
+    "db:push": "cd packages/db && pnpm exec prisma db push",
+    "db:migrate": "cd packages/db && pnpm exec prisma migrate dev",
+    "db:studio": "cd packages/db && pnpm exec prisma studio",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@types/node": "^20.17.0",
-    "husky": "^9.1.0",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.4.0",
-    "turbo": "^2.3.0",
-    "typescript": "^5.7.0"
+    "@types/node": "^22.10.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
+    "turbo": "^2.3.4",
+    "typescript": "^5.7.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
