--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -9,6 +9,9 @@
     "./tsconfig/library": "./tsconfig/library.json",
     "./eslint/base": "./eslint/base.js",
     "./tailwind": "./tailwind/base.config.ts"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
 
