--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "scripts": {
@@ -19,12 +26,12 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "zod": "^3.23.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@todoai/config": "workspace:*",
-    "tsup": "^8.3.0",
-    "typescript": "^5.7.0"
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   }
 }
 
