--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@todoai/types": "workspace:*",
     "@todoai/ui": "workspace:*",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^14.2.20",
     "react": "^18.3.1",
